--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "antd": "^5.10.3",
+    "bootstrap": "^5.3.2",
     "gh-pages": "^6.0.0",
     "loader-utils": "3.2.1",
     "react": "18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "18.2.0",
     "react-router-dom": "6.10.0",
     "react-scripts": "5.0.1"
