--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-bootstrap": "^2.9.1",
     "react-dom": "18.2.0",
     "react-router-dom": "6.10.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "@babel/runtime": "7.13.8",
