--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "react": "18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "18.2.0",
+    "react-redux": "^8.1.3",
     "react-router-dom": "6.10.0",
     "react-scripts": "5.0.1",
-    "react-toastify": "^9.1.3"
+    "react-toastify": "^9.1.3",
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "@babel/runtime": "7.13.8",
