--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "@auth0/auth0-react": "^2.2.3",
     "antd": "^5.10.3",
     "bootstrap": "^5.3.2",
     "gh-pages": "^6.0.0",
