--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -7,6 +7,7 @@
   "main": "src/index.js",
   "dependencies": {
     "@auth0/auth0-react": "^2.2.3",
+    "@headlessui/react": "^1.7.17",
     "@reduxjs/toolkit": "^1.9.7",
     "antd": "^5.10.3",
     "bootstrap": "^5.3.2",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "@babel/runtime": "7.13.8",
+    "tailwindcss": "^3.3.5",
     "typescript": "4.1.3"
   },
   "scripts": {
