--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://myusername.github.io/AgroCart",
+  "homepage": "https://myusername.github.io",
   "name": "agrocart",
   "version": "1.0.0",
   "description": "",
