--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -7,15 +7,18 @@
   "main": "src/index.js",
   "dependencies": {
     "@auth0/auth0-react": "^2.2.3",
+    "@fortawesome/fontawesome-free": "^6.4.2",
     "@headlessui/react": "^1.7.17",
     "@reduxjs/toolkit": "^1.9.7",
     "antd": "^5.10.3",
     "bootstrap": "^5.3.2",
+    "firebase": "^10.6.0",
     "gh-pages": "^6.0.0",
     "loader-utils": "3.2.1",
     "react": "18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "18.2.0",
+    "react-icons": "^4.12.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "6.10.0",
     "react-scripts": "5.0.1",
